pratique/2020-ps-f2-estrada.out-comp.txt
2020-ps-f2-estrada.cpp: In function ‘int main()’:
2020-ps-f2-estrada.cpp:20:22: error: ‘setprecision’ was not declared in this scope
   20 |     cout << fixed << setprecision(2) << min_distance << endl;
      |                      ^~~~~~~~~~~~
